# ec2-manager

./: .gitignore  pyproject.toml
ec2_manager/: main.py  reagion.txt  test.py
